# ghclive

./: .gitignore  HyperHaskell.cabal  LICENSE  README.md  ghclive.cabal
cache/: Helper.hs
docs/: plan.md
prototypes/hintdownloadexecute/: example.hs
prototypes/hintpostexecute/: HintAjax.hs  hint.html
prototypes/hintpostexecute/static/: clock.js  haskell.js  style.css
prototypes/jqueryconsole/: hint.html
prototypes/jqueryconsole/static/: hintconsole.js  style.css
prototypes/jqueryraw/: HintAjax.hs  hint.html
prototypes/jqueryraw/static/: hintconsole.js  rawsub.js
prototypes/multimport/: HintAjax.hs  README.md  hint.html
prototypes/multimport/cache/: Helper.hs
prototypes/multimport/static/: hintconsole.js
prototypes/scottyjsonclock/: Clock.hs  clock.html
prototypes/scottyjsonclock/static/: clock.js
prototypes/scottywebexecute/: basic.hs
prototypes/sharededitor/: WsTest.hs
prototypes/sharededitor/static/: document.js
prototypes/svgdemo/: Helper.hs  HintAjax.hs  README.md
prototypes/svgdemo/static/: hintconsole.js
src/: Main.hs
src-main/: Main.hs  SeqMap.hs  SignalHandlers.hs
src/Network/Web/GHCLive/: Display.hs
src/Network/Web/HyperHaskell/: Display.hs
static/: document.js  foo.css  ghclive.js  hint.html  hintconsole.js  jquery-ui-1.8.23.custom.css  jquery-ui-1.8.23.custom.min.js  jquery.layout-latest.js  style.css
static/layout/: simple.html
