name:                ghclive
-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.1.0
synopsis:            Interactive Haskell interpreter in a browser.
Description:
                     ghclive is an interactive Haskell interactive in a browser.
                     It can do most of what ghci does, with a few extra abilities.

homepage:            http://github.com/shapr/ghclive/
license:             BSD3
license-file:        LICENSE
author:              Shae Erisson
maintainer:          shae@ScannedInAvian.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8
Library
  build-depends:
    aeson > 0.6 && < 0.7,
    base >= 4 && < 5,
    blaze-html > 0.5,
    blaze-markup > 0.5,
    diagrams-lib > 0.5,
    diagrams-svg > 0.3,
    ghc-prim,
    text > 0.11,
    unix > 2,
    containers > 0.4
  hs-source-dirs:      src
  exposed-modules:
    Network.Web.GHCLive.Display

executable ghclive
  main-is: Main.hs

  if !os(windows)
    build-depends: unix
  build-depends:
    ghclive > 0.0.1,
    yesod-static,
    mtl >= 2.0 && < 3,
    containers > 0.4,
    unix > 2,
    wai-websockets > 1.3,
    websockets,
    wai >= 1.3 && < 1.4,
    time > 1.3,
    vector > 0.9,
    unordered-containers > 0.2,
    blaze-markup > 0.5,
    aeson > 0.6 && < 0.7,
    text > 0.11,
    yesod >= 1.1 && < 1.2,
    warp >= 1.3 && < 1.4,
    blaze-html,
    bytestring > 0.9,
    hint == 0.3.*,
    directory,
    file-embed > 0.0.4,
    base >= 4 && < 5

  hs-source-dirs:  src-main
